--- a/components/ItemComponents/RelatedItemsModule/RelatedItemsModule.scss
+++ b/components/ItemComponents/RelatedItemsModule/RelatedItemsModule.scss
@@ -3,27 +3,11 @@
 .wrapper {
   background-color: $warmerBackgroundColor;
   width: 100%;
-  box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.1);
 }
 
 .relatedItems {
-  padding: 2rem 1rem;
-
-  /* overrides for react-slick css*/
-  & :global {
-    .slick-prev:before, .slick-next:before {
-      content: none;
-    }
-
-    .slick-disabled {
-      display: none;
-    }
-  }
-
-  @media (min-width: $largeRem) {
-    padding-left: 0;
-    padding-right: 0;
-  }
+  padding: 1rem;
+  margin-top: 1rem;
 }
 
 .item {
